# server-r-client

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
examples/: all_node_types.rs  basic_usage.rs  config.rs  error_handling.rs  heartbeat.rs  register.rs  submit.rs  users.rs  verify.rs
src/: client.rs  error.rs  lib.rs
src/models/: config.rs  mod.rs  node_type.rs  request.rs  response.rs  user.rs
tests/: integration_tests.rs
