[package]
name = "server-r-client"
version = "0.1.1"
edition = "2021"
rust-version = "1.83.0"
description = "Rust HTTP client library for xflash-panda server communication"
license = "MIT"
repository = "https://github.com/xflash-panda/server-r-client"
keywords = ["proxy", "client", "api"]
categories = ["network-programming", "api-bindings"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
tracing = "0.1"
url = "2.5"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
tracing-subscriber = "0.3"

[features]
default = []
